fixed dark mode lagging behind

--- a/FitBoard/Settings/Settings.css
+++ b/FitBoard/Settings/Settings.css
@@ -183,7 +183,6 @@
 	top: 0;
 	left: 80px;
 	background-color: var(--gray);
-	transition: all 0.5s ease;
 	width: 94.75vw;
 	max-width: 100%;
 	padding: 1rem;
